<resources>
    <string name="app_name">Museum Tickets</string>
    <string name="top_nyc_museums_to_visit">Top NYC Museums to visit</string>
    <string name="museumOneList">1. The Metropolitan Museum of Art</string>
    <string name="museumTwoList">2. The Museum of Modern Art</string>
    <string name="museumThreeList">3. American Museum of Natural History</string>
    <string name="museumFourList">4. Solomon R. Guggenheim Museum</string>


    <string name="museumTitle">Ticket Price Calculator</string>
    <string name="museum1">The Metropolitan Museum of Art</string>
    <string name="museum2">The Museum of Modern Art</string>
    <string name="museum3">American Museum of Natural History</string>
    <string name="museum4">Solomon R. Guggenheim Museum</string>

    <string name="adultPrice">adult $</string>
    <string name="seniorPrice">senior $</string>
    <string name="studentPrice">student $</string>

    <string name="ticketPriceMsg">Ticket Price: $</string>
    <string name="taxPriceMsg">Sales Tax: $</string>
    <string name="totalPriceMsg">Ticket Total: $</string>

    <string name="toaster">Maximum of 5 tickets for each!</string>


    <string name="todo">TODO</string>
    <string name="button">Calculate Ticket Price</string>
    <string name="set_price" />
    <string name="ticket_price">ticket price</string>
    <string name="sales_tax">sales tax</string>
    <string name="ticket_total">ticket total</string>
    <string-array name="numbers">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
</resources>